Add synthetic bank statement data and images for multi-turn extraction protocol
- Introduced a new CSV file `ground_truth_synthetic_bank.csv` containing synthetic bank statement data.
- Added multiple images representing bank statements to `evaluation_data/images/` and `evaluation_data/synthetic_bank_images/`.
- Updated `llama_multiturn.ipynb` to enhance the multi-turn extraction protocol, including:
  - Improved markdown extraction instructions.
  - Implemented pattern matching for generic column names.
  - Added functionality to filter extracted tables based on identified headers.

--- a/llama_multiturn.ipynb
+++ b/llama_multiturn.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Imports"
+    "# Llama 3.2 Vision: Multi-Turn Bank Statement Markdown Extraction\n",
+    "\n",
+    "**Protocol**: Extract bank statement tables in markdown format, then filter/analyze via multi-turn conversation\n",
+    "\n",
+    "**No LangChain Dependencies** - Pure transformers + Llama multi-turn pattern"
    ]
   },
   {
@@ -54,7 +58,8 @@
    "outputs": [],
    "source": [
     "# Update this path to your local Llama model\n",
-    "model_id = \"/home/jovyan/shared_PTM/Llama-3.2-11B-Vision-Instruct\"\n",
+    "# model_id = \"/home/jovyan/shared_PTM/Llama-3.2-11B-Vision-Instruct\"\n",
+    "model_id = \"/home/jovyan/nfs_share/models/Llama-3.2-11B-Vision-Instruct\"\n",
     "\n",
     "print(\"🔧 Loading Llama-3.2-Vision model...\")\n",
     "# model = MllamaForConditionalGeneration.from_pretrained(\n",
@@ -116,7 +121,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define the prompt"
+    "# Multi-Turn Bank Statement Protocol\n",
+    "- Turn 0: Identify actual table headers\n",
+    "- Turn 1: Extract full table using those headers\n",
+    "- Turn 2: Filter using the actual column names found"
    ]
   },
   {
@@ -125,13 +133,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visual Question Answering - ask a simple question about the image\n",
+    "# TURN 0: Identify Table Headers\n",
+    "# First, identify the actual column headers used in this specific bank statement\n",
+    "\n",
     "prompt = \"\"\"\n",
-    "You are an expert document analyser specializing in Date Grouped Australian Bank Statement extraction.\n",
-    "Date Grouped Bank Statements are date ordered, with one or more transactions for each date header.\n",
-    "Every transaction for a given date heading has a description, a debit/credit amount and finally a balance amount with a ' CR' suffix.\n",
-    "Extract all balance amounts along with their ' CR' suffix, the transaction dates (from the date heading) and transaction descriptions,\n",
-    "maintaining the same date ordering as the image, with every transaction appearing on its own row and remembering that some date headings have more than one balance.\n",
+    "Look at the transaction table in this bank statement image.\n",
+    "\n",
+    "IMPORTANT STRUCTURAL NOTE:\n",
+    "Some bank statements show dates as section headings with multiple transactions underneath.\n",
+    "If you see this structure, remember that each transaction needs its explicit date in the final output.\n",
+    "\n",
+    "What are the exact column header names used in the transaction table?\n",
+    "\n",
+    "List each column header exactly as it appears, in order from left to right.\n",
+    "Do not interpret or rename them - use the EXACT text from the image.\n",
     "\"\"\"\n",
     "\n",
     "# Create message structure for Llama\n",
@@ -148,7 +163,7 @@
     "    }\n",
     "]\n",
     "\n",
-    "print(f\"💬 Prompt: {prompt}\")\n",
+    "print(\"💬 TURN 0: Identifying actual table headers\")\n",
     "print(\"🤖 Generating response with Llama-3.2-Vision...\")"
    ]
   },
@@ -222,19 +237,37 @@
     "\n",
     "print(\"✅ Response generated successfully!\")\n",
     "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"CLEANED EXTRACTION:\")\n",
+    "print(\"TURN 0 - IDENTIFIED TABLE HEADERS:\")\n",
     "print(\"=\" * 60)\n",
     "print(cleanedOutput)\n",
     "print(\"=\" * 60)\n",
     "\n",
-    "# Save the cleaned response to a file\n",
-    "output_path = Path(\"llama_grouped_bank_statement_output.txt\")\n",
+    "# CRITICAL: Parse the identified headers for use in subsequent turns\n",
+    "# Extract column names from the response\n",
+    "header_lines = [line.strip() for line in cleanedOutput.split('\\n') if line.strip()]\n",
+    "identified_headers = []\n",
     "\n",
+    "# Look for numbered list or bullet points\n",
+    "for line in header_lines:\n",
+    "    # Remove common list markers\n",
+    "    cleaned = line.lstrip('0123456789.-•* ').strip()\n",
+    "    if cleaned and len(cleaned) > 2:  # Ignore very short strings\n",
+    "        identified_headers.append(cleaned)\n",
+    "\n",
+    "print(f\"\\n📋 Parsed {len(identified_headers)} column headers:\")\n",
+    "for i, header in enumerate(identified_headers, 1):\n",
+    "    print(f\"  {i}. '{header}'\")\n",
+    "\n",
+    "# Store headers for use in subsequent turns\n",
+    "table_headers = identified_headers\n",
+    "\n",
+    "# Save the table headers\n",
+    "output_path = Path(\"llama_table_headers.txt\")\n",
     "with output_path.open(\"w\", encoding=\"utf-8\") as text_file:\n",
     "    text_file.write(cleanedOutput)\n",
     "\n",
-    "print(f\"✅ Response saved to: {output_path}\")\n",
-    "print(f\"📊 File size: {output_path.stat().st_size} bytes\")"
+    "print(f\"\\n✅ Table headers saved to: {output_path}\")\n",
+    "print(\"💡 These LITERAL header names will be used in Turn 1 & 2 prompts\")"
    ]
   },
   {
@@ -244,6 +277,77 @@
     "## Multi-Turn Conversation Support\n",
     "\n",
     "Llama supports multi-turn conversations by maintaining a conversation history list:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern Matching: Map Generic Concepts to Actual Headers\n",
+    "\n",
+    "Different bank statements use different column names. Use pattern matching to identify:\n",
+    "- Which header represents **Date**\n",
+    "- Which header represents **Description/Details**  \n",
+    "- Which header represents **Debit/Withdrawal**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pattern Matching: Map extracted headers to generic concepts\n",
+    "# This handles variety in bank statement column naming conventions\n",
+    "\n",
+    "# Pattern keywords for each concept (in priority order)\n",
+    "DATE_PATTERNS = ['date', 'day', 'transaction date', 'trans date']\n",
+    "DESCRIPTION_PATTERNS = [\n",
+    "    'description', 'details', 'transaction details', 'trans details',\n",
+    "    'particulars', 'narrative', 'transaction', 'trans'\n",
+    "]\n",
+    "DEBIT_PATTERNS = ['debit', 'withdrawal', 'withdrawals', 'paid', 'paid out', 'spent', 'dr']\n",
+    "CREDIT_PATTERNS = ['credit', 'deposit', 'deposits', 'received', 'cr']\n",
+    "BALANCE_PATTERNS = ['balance', 'bal', 'running balance']\n",
+    "\n",
+    "def match_header(headers, patterns, fallback=None):\n",
+    "    \"\"\"Match a header using pattern keywords.\"\"\"\n",
+    "    headers_lower = [h.lower() for h in headers]\n",
+    "    \n",
+    "    # Try exact match first\n",
+    "    for pattern in patterns:\n",
+    "        for i, header_lower in enumerate(headers_lower):\n",
+    "            if pattern == header_lower:\n",
+    "                return headers[i]\n",
+    "    \n",
+    "    # Try substring match\n",
+    "    for pattern in patterns:\n",
+    "        for i, header_lower in enumerate(headers_lower):\n",
+    "            if pattern in header_lower:\n",
+    "                return headers[i]\n",
+    "    \n",
+    "    return fallback\n",
+    "\n",
+    "# Perform pattern matching on extracted headers\n",
+    "date_col = match_header(table_headers, DATE_PATTERNS, fallback=table_headers[0] if table_headers else 'Date')\n",
+    "desc_col = match_header(table_headers, DESCRIPTION_PATTERNS, fallback=table_headers[1] if len(table_headers) > 1 else 'Description')\n",
+    "debit_col = match_header(table_headers, DEBIT_PATTERNS, fallback='Debit')\n",
+    "credit_col = match_header(table_headers, CREDIT_PATTERNS, fallback='Credit')\n",
+    "balance_col = match_header(table_headers, BALANCE_PATTERNS, fallback='Balance')\n",
+    "\n",
+    "print(\"=\" * 60)\n",
+    "print(\"PATTERN MATCHING RESULTS:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(f\"📋 Extracted Headers: {table_headers}\")\n",
+    "print(f\"\\n🔍 Mapped Columns:\")\n",
+    "print(f\"  Date       → '{date_col}'\")\n",
+    "print(f\"  Description → '{desc_col}'\")\n",
+    "print(f\"  Debit      → '{debit_col}'\")\n",
+    "print(f\"  Credit     → '{credit_col}'\")\n",
+    "print(f\"  Balance    → '{balance_col}'\")\n",
+    "print(\"=\" * 60)\n",
+    "print(\"\\n✅ These literal column names will be used in Turn 1 and Turn 2\")\n",
+    "print(\"💡 Adjust patterns above if matching fails for your bank statement format\")"
    ]
   },
   {
@@ -325,7 +429,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Follow-up Question (Turn 2)"
+    "### TURN 1: Extract Full Table in Markdown\n",
+    "\n",
+    "Now that we know the actual column headers, extract the complete table:"
    ]
   },
   {
@@ -334,10 +440,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Follow-up question (Turn 2)\n",
+    "# TURN 1: Extract Full Table with LITERAL Header Names\n",
     "# Using the WORKING pattern from: https://medium.com/data-science/chat-with-your-images-using-multimodal-llms-60af003e8bfa\n",
     "\n",
-    "follow_up_prompt = \"How many transactions are shown in this bank statement?\"\n",
+    "# Build the header string using LITERAL names from Turn 0\n",
+    "header_string = \" | \".join(table_headers)\n",
+    "\n",
+    "follow_up_prompt = f\"\"\"\n",
+    "Now extract the entire transaction table from the bank statement in markdown format.\n",
+    "\n",
+    "Use these EXACT column headers in this order:\n",
+    "{header_string}\n",
+    "\n",
+    "Format requirements:\n",
+    "- Standard markdown table syntax with | delimiters\n",
+    "- Header row: | {header_string} |\n",
+    "- Separator row: | {\" | \".join([\"---\"] * len(table_headers))} |\n",
+    "\n",
+    "CRITICAL EXTRACTION RULES:\n",
+    "1. Extract EVERY transaction as a separate row\n",
+    "2. Each transaction MUST have its explicit date in the date column\n",
+    "3. If multiple transactions share a date heading, repeat that date for each transaction row\n",
+    "4. Do NOT skip or combine any rows\n",
+    "5. Keep all amounts with decimal values intact\n",
+    "6. Do NOT add explanatory text - only output the markdown table\n",
+    "\n",
+    "Example: If you see:\n",
+    "  01/06/2024\n",
+    "    Transaction A    $100\n",
+    "    Transaction B    $50\n",
+    "    \n",
+    "Output as TWO rows:\n",
+    "  | 01/06/2024 | Transaction A | $100 | ... |\n",
+    "  | 01/06/2024 | Transaction B | $50  | ... |\n",
+    "\"\"\"\n",
     "\n",
     "# Append user's follow-up to conversation history (text only - NO image in content)\n",
     "conversation_history.append({\n",
@@ -345,7 +481,8 @@
     "    \"content\": [{\"type\": \"text\", \"text\": follow_up_prompt}]\n",
     "})\n",
     "\n",
-    "print(f\"💬 Follow-up question: {follow_up_prompt}\")\n",
+    "print(f\"💬 TURN 1: Extract full markdown table\")\n",
+    "print(f\"📋 Using literal headers: {table_headers}\")\n",
     "print(\"🤖 Generating follow-up response with Llama-3.2-Vision...\")\n",
     "\n",
     "# Process with updated conversation history\n",
@@ -371,10 +508,17 @@
     "\n",
     "print(\"\\n✅ Follow-up response generated successfully!\")\n",
     "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"FOLLOW-UP RESPONSE:\")\n",
+    "print(\"TURN 1 - FULL MARKDOWN TABLE:\")\n",
     "print(\"=\" * 60)\n",
     "print(cleanedOutput2)\n",
     "print(\"=\" * 60)\n",
+    "\n",
+    "# Save the markdown table\n",
+    "output_path = Path(\"llama_markdown_table_extraction.txt\")\n",
+    "with output_path.open(\"w\", encoding=\"utf-8\") as text_file:\n",
+    "    text_file.write(cleanedOutput2)\n",
+    "\n",
+    "print(f\"\\n✅ Markdown table saved to: {output_path}\")\n",
     "\n",
     "# Update conversation history with assistant's response\n",
     "conversation_history.append({\n",
@@ -382,16 +526,17 @@
     "    \"content\": [{\"type\": \"text\", \"text\": cleanedOutput2}]\n",
     "})\n",
     "\n",
-    "print(f\"\\n📊 Conversation now has {len(conversation_history)} messages\")"
+    "print(f\"\\n📊 Conversation now has {len(conversation_history)} messages\")\n",
+    "print(\"💡 Each transaction has explicit date, even if grouped by date heading\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Additional Follow-up (Turn 3 - Optional)\n",
+    "### TURN 2: Filter Using Actual Column Names\n",
     "\n",
-    "You can continue the conversation by running this cell with different questions:"
+    "Filter the extracted table using the specific column names identified in Turn 0:"
    ]
   },
   {
@@ -400,8 +545,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Third turn - another follow-up (uncomment to use)\n",
-    "follow_up_prompt_3 = \"What is the date range covered by this bank statement?\"\n",
+    "# TURN 2: Filter using LITERAL column names from pattern matching\n",
+    "\n",
+    "follow_up_prompt_3 = f\"\"\"\n",
+    "From the markdown table you just extracted, create a filtered version showing ONLY withdrawal/debit transactions.\n",
+    "\n",
+    "Use these EXACT column names:\n",
+    "- {date_col}\n",
+    "- {desc_col}  \n",
+    "- {debit_col}\n",
+    "\n",
+    "Filter rules:\n",
+    "- Only include rows where '{debit_col}' has a value (not empty)\n",
+    "- Exclude credit/deposit transactions\n",
+    "- Keep the markdown table format with header: | {date_col} | {desc_col} | {debit_col} |\n",
+    "\n",
+    "Output only the filtered markdown table.\n",
+    "\"\"\"\n",
     "\n",
     "# Append user's follow-up to conversation history\n",
     "conversation_history.append({\n",
@@ -409,7 +569,8 @@
     "    \"content\": [{\"type\": \"text\", \"text\": follow_up_prompt_3}]\n",
     "})\n",
     "\n",
-    "print(f\"💬 Follow-up question: {follow_up_prompt_3}\")\n",
+    "print(f\"💬 TURN 2: Filter using literal column names\")\n",
+    "print(f\"📋 Filter columns: '{date_col}' | '{desc_col}' | '{debit_col}'\")\n",
     "print(\"🤖 Generating follow-up response with Llama-3.2-Vision...\")\n",
     "\n",
     "# Process with updated conversation history\n",
@@ -435,10 +596,17 @@
     "\n",
     "print(\"\\n✅ Follow-up response generated successfully!\")\n",
     "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"FOLLOW-UP RESPONSE:\")\n",
+    "print(\"TURN 2 - FILTERED WITHDRAWALS:\")\n",
     "print(\"=\" * 60)\n",
     "print(cleanedOutput3)\n",
     "print(\"=\" * 60)\n",
+    "\n",
+    "# Save filtered results\n",
+    "output_path = Path(\"llama_filtered_withdrawals.txt\")\n",
+    "with output_path.open(\"w\", encoding=\"utf-8\") as text_file:\n",
+    "    text_file.write(cleanedOutput3)\n",
+    "\n",
+    "print(f\"\\n✅ Filtered table saved to: {output_path}\")\n",
     "\n",
     "# Update conversation history with assistant's response\n",
     "conversation_history.append({\n",
@@ -447,7 +615,12 @@
     "})\n",
     "\n",
     "print(f\"\\n📊 Conversation now has {len(conversation_history)} messages\")\n",
-    "print(\"\\n💡 To ask more questions, copy this cell and modify the 'follow_up_prompt_3' variable\")"
+    "print(f\"\\n✅ Complete Protocol:\")\n",
+    "print(f\"   Turn 0: Identify headers → {table_headers}\")\n",
+    "print(f\"   Pattern Match: Date='{date_col}', Desc='{desc_col}', Debit='{debit_col}'\")\n",
+    "print(f\"   Turn 1: Extract with all headers\")\n",
+    "print(f\"   Turn 2: Filter using '{debit_col}' column\")\n",
+    "print(\"\\n✅ No langchain dependencies - production ready!\")"
    ]
   },
   {
