fix: Clean up random seed setting and improve header identification logic

--- a/llama_bank_statement_multiturn.ipynb
+++ b/llama_bank_statement_multiturn.ipynb
@@ -62,8 +62,7 @@
    "outputs": [],
    "source": [
     "from common.reproducibility import set_seed\n",
-    "set_seed(42)\n",
-    "print(\"✅ Random seed set to 42 for reproducibility\")"
+    "set_seed(42)"
    ]
   },
   {
@@ -127,8 +126,8 @@
    "outputs": [],
    "source": [
     "# Update this path to your test image\n",
-    "# imageName = \"/home/jovyan/shared_PoC_data/evaluation_data/image_009.png\"\n",
-    "imageName = \"/home/jovyan/nfs_share/tod/LMM_POC/evaluation_data/image_008.png\"\n",
+    "# imageName = \"/home/jovyan/shared_PoC_data/evaluation_data/synthetic_bank_images/cba_amount_balance.png\"\n",
+    "imageName = \"/home/jovyan/nfs_share/tod/LMM_POC/evaluation_data/images/image_008.png\"\n",
     "print(\"📁 Loading image...\")\n",
     "image = Image.open(imageName)\n",
     "\n",
@@ -241,6 +240,14 @@
     "for line in header_lines:\n",
     "    # Remove common list markers\n",
     "    cleaned = line.lstrip('0123456789.-•* ').strip()\n",
+    "    \n",
+    "    # Strip markdown bold formatting\n",
+    "    cleaned = cleaned.replace('**', '').replace('__', '')\n",
+    "    \n",
+    "    # Skip long sentences (likely explanatory text, not headers)\n",
+    "    if len(cleaned) > 40:\n",
+    "        continue\n",
+    "        \n",
     "    if cleaned and len(cleaned) > 2:  # Ignore very short strings\n",
     "        identified_headers.append(cleaned)\n",
     "\n",
