--- a/llama_bank_statement_multiturn.ipynb
+++ b/llama_bank_statement_multiturn.ipynb
@@ -372,7 +372,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70c767d7a52d47ab81c9a736613c7ed9",
+       "model_id": "ae536a24d0f445beb9f389a24b09af66",
        "version_major": 2,
        "version_minor": 0
       },
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1345,10 +1345,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": "import re\nfrom datetime import datetime\n\ndef parse_markdown_table(markdown_text):\n    \"\"\"Parse markdown table into list of dictionaries.\"\"\"\n    lines = [line.strip() for line in markdown_text.strip().split('\\n') if line.strip()]\n    \n    # Find header row (first line with pipes)\n    header_idx = None\n    for i, line in enumerate(lines):\n        if '|' in line and not set(line.replace('|', '').replace('-', '').strip()) == set():\n            header_idx = i\n            break\n    \n    if header_idx is None:\n        return []\n    \n    # Parse headers\n    header_line = lines[header_idx]\n    headers = [h.strip() for h in header_line.split('|') if h.strip()]\n    \n    # Parse data rows (skip header and separator)\n    rows = []\n    for line in lines[header_idx + 1:]:\n        if '|' in line:\n            # Skip separator rows (contain only pipes, hyphens, and spaces)\n            cleaned = line.replace('|', '').replace('-', '').replace(' ', '')\n            if not cleaned:\n                continue\n            \n            values = [v.strip() for v in line.split('|') if v.strip()]\n            if len(values) == len(headers):\n                rows.append(dict(zip(headers, values)))\n    \n    return rows\n\ndef extract_schema_fields(rows, date_col, desc_col, debit_col):\n    \"\"\"Extract fields in universal.yaml schema format.\"\"\"\n    if not rows:\n        return {\n            'TRANSACTION_DATES': 'NOT_FOUND',\n            'LINE_ITEM_DESCRIPTIONS': 'NOT_FOUND',\n            'TRANSACTION_AMOUNTS_PAID': 'NOT_FOUND',\n            'STATEMENT_DATE_RANGE': 'NOT_FOUND'\n        }\n    \n    # Extract lists\n    dates = []\n    descriptions = []\n    amounts = []\n    \n    for row in rows:\n        date = row.get(date_col, '').strip()\n        desc = row.get(desc_col, '').strip()\n        amount = row.get(debit_col, '').strip()\n        \n        if date:\n            dates.append(date)\n        if desc:\n            descriptions.append(desc)\n        if amount:\n            amounts.append(amount)\n    \n    # Calculate statement date range\n    date_range = 'NOT_FOUND'\n    if dates:\n        try:\n            # Try to parse dates to find min/max\n            parsed_dates = []\n            for d in dates:\n                # Try common formats\n                for fmt in ['%d/%m/%Y', '%d/%m/%y', '%Y-%m-%d', '%d-%m-%Y']:\n                    try:\n                        parsed_dates.append(datetime.strptime(d, fmt))\n                        break\n                    except ValueError:\n                        continue\n            \n            if parsed_dates:\n                min_date = min(parsed_dates)\n                max_date = max(parsed_dates)\n                date_range = f\"{min_date.strftime('%d/%m/%Y')} to {max_date.strftime('%d/%m/%Y')}\"\n        except Exception:\n            # If parsing fails, use first and last date as-is\n            date_range = f\"{dates[0]} to {dates[-1]}\"\n    \n    return {\n        'TRANSACTION_DATES': ' | '.join(dates) if dates else 'NOT_FOUND',\n        'LINE_ITEM_DESCRIPTIONS': ' | '.join(descriptions) if descriptions else 'NOT_FOUND',\n        'TRANSACTION_AMOUNTS_PAID': ' | '.join(amounts) if amounts else 'NOT_FOUND',\n        'STATEMENT_DATE_RANGE': date_range\n    }\n\n# Parse the filtered markdown table from Turn 2\nparsed_rows = parse_markdown_table(cleanedOutput3)\n\nprint(f\"📊 Parsed {len(parsed_rows)} transactions from markdown table\")\nprint(\"\\n\" + \"=\" * 60)\nprint(\"SAMPLE ROWS:\")\nprint(\"=\" * 60)\nfor i, row in enumerate(parsed_rows[:3], 1):\n    print(f\"\\nRow {i}:\")\n    for key, value in row.items():\n        print(f\"  {key}: {value}\")\n\n# Extract schema fields using the LITERAL column names from pattern matching\nschema_fields = extract_schema_fields(parsed_rows, date_col, desc_col, debit_col)\n\nprint(\"\\n\" + \"=\" * 60)\nprint(\"EXTRACTED SCHEMA FIELDS:\")\nprint(\"=\" * 60)\nfor field, value in schema_fields.items():\n    print(f\"{field}: {value}\")\nprint(\"=\" * 60)\n\n# Save to file\noutput_path = Path(\"llama_extracted_fields.txt\")\nwith output_path.open(\"w\", encoding=\"utf-8\") as f:\n    for field, value in schema_fields.items():\n        f.write(f\"{field}: {value}\\n\")\n\nprint(f\"\\n✅ Schema fields saved to: {output_path}\")\nprint(f\"💡 Fields extracted from columns: '{date_col}' | '{desc_col}' | '{debit_col}'\")"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📊 Parsed 6 transactions from markdown table\n",
+      "\n",
+      "============================================================\n",
+      "SAMPLE ROWS:\n",
+      "============================================================\n",
+      "\n",
+      "Row 1:\n",
+      "  Date: 03/05/2025\n",
+      "  Description: ONLINE PURCHASE AMAZON AU\n",
+      "  Withdrawal: $288.03\n",
+      "\n",
+      "Row 2:\n",
+      "  Date: 04/05/2025\n",
+      "  Description: EFTPOS PURCHASE COLES EXP\n",
+      "  Withdrawal: $22.50\n",
+      "\n",
+      "Row 3:\n",
+      "  Date: 05/05/2025\n",
+      "  Description: EFTPOS PURCHASE COLES EXP\n",
+      "  Withdrawal: $114.66\n",
+      "\n",
+      "============================================================\n",
+      "EXTRACTED SCHEMA FIELDS:\n",
+      "============================================================\n",
+      "TRANSACTION_DATES: 03/05/2025 | 04/05/2025 | 05/05/2025 | 07/05/2025 | 08/05/2025 | 10/05/2025\n",
+      "LINE_ITEM_DESCRIPTIONS: ONLINE PURCHASE AMAZON AU | EFTPOS PURCHASE COLES EXP | EFTPOS PURCHASE COLES EXP | ATM WITHDRAWAL ANZ ATM | EFTPOS PURCHASE COLES EXP | ATM WITHDRAWAL ANZ ATM\n",
+      "TRANSACTION_AMOUNTS_PAID: $288.03 | $22.50 | $114.66 | $187.59 | $112.50 | $146.72\n",
+      "STATEMENT_DATE_RANGE: 03/05/2025 to 10/05/2025\n",
+      "============================================================\n",
+      "\n",
+      "✅ Schema fields saved to: llama_extracted_fields.txt\n",
+      "💡 Fields extracted from columns: 'Date' | 'Description' | 'Withdrawal'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "from datetime import datetime\n",
+    "\n",
+    "def parse_markdown_table(markdown_text):\n",
+    "    \"\"\"Parse markdown table into list of dictionaries.\"\"\"\n",
+    "    lines = [line.strip() for line in markdown_text.strip().split('\\n') if line.strip()]\n",
+    "    \n",
+    "    # Find header row (first line with pipes)\n",
+    "    header_idx = None\n",
+    "    for i, line in enumerate(lines):\n",
+    "        if '|' in line and not set(line.replace('|', '').replace('-', '').strip()) == set():\n",
+    "            header_idx = i\n",
+    "            break\n",
+    "    \n",
+    "    if header_idx is None:\n",
+    "        return []\n",
+    "    \n",
+    "    # Parse headers\n",
+    "    header_line = lines[header_idx]\n",
+    "    headers = [h.strip() for h in header_line.split('|') if h.strip()]\n",
+    "    \n",
+    "    # Parse data rows (skip header and separator)\n",
+    "    rows = []\n",
+    "    for line in lines[header_idx + 1:]:\n",
+    "        if '|' in line:\n",
+    "            # Skip separator rows (contain only pipes, hyphens, and spaces)\n",
+    "            cleaned = line.replace('|', '').replace('-', '').replace(' ', '')\n",
+    "            if not cleaned:\n",
+    "                continue\n",
+    "            \n",
+    "            values = [v.strip() for v in line.split('|') if v.strip()]\n",
+    "            if len(values) == len(headers):\n",
+    "                rows.append(dict(zip(headers, values)))\n",
+    "    \n",
+    "    return rows\n",
+    "\n",
+    "def extract_schema_fields(rows, date_col, desc_col, debit_col):\n",
+    "    \"\"\"Extract fields in universal.yaml schema format.\"\"\"\n",
+    "    if not rows:\n",
+    "        return {\n",
+    "            'TRANSACTION_DATES': 'NOT_FOUND',\n",
+    "            'LINE_ITEM_DESCRIPTIONS': 'NOT_FOUND',\n",
+    "            'TRANSACTION_AMOUNTS_PAID': 'NOT_FOUND',\n",
+    "            'STATEMENT_DATE_RANGE': 'NOT_FOUND'\n",
+    "        }\n",
+    "    \n",
+    "    # Extract lists\n",
+    "    dates = []\n",
+    "    descriptions = []\n",
+    "    amounts = []\n",
+    "    \n",
+    "    for row in rows:\n",
+    "        date = row.get(date_col, '').strip()\n",
+    "        desc = row.get(desc_col, '').strip()\n",
+    "        amount = row.get(debit_col, '').strip()\n",
+    "        \n",
+    "        if date:\n",
+    "            dates.append(date)\n",
+    "        if desc:\n",
+    "            descriptions.append(desc)\n",
+    "        if amount:\n",
+    "            amounts.append(amount)\n",
+    "    \n",
+    "    # Calculate statement date range\n",
+    "    date_range = 'NOT_FOUND'\n",
+    "    if dates:\n",
+    "        try:\n",
+    "            # Try to parse dates to find min/max\n",
+    "            parsed_dates = []\n",
+    "            for d in dates:\n",
+    "                # Try common formats\n",
+    "                for fmt in ['%d/%m/%Y', '%d/%m/%y', '%Y-%m-%d', '%d-%m-%Y']:\n",
+    "                    try:\n",
+    "                        parsed_dates.append(datetime.strptime(d, fmt))\n",
+    "                        break\n",
+    "                    except ValueError:\n",
+    "                        continue\n",
+    "            \n",
+    "            if parsed_dates:\n",
+    "                min_date = min(parsed_dates)\n",
+    "                max_date = max(parsed_dates)\n",
+    "                date_range = f\"{min_date.strftime('%d/%m/%Y')} to {max_date.strftime('%d/%m/%Y')}\"\n",
+    "        except Exception:\n",
+    "            # If parsing fails, use first and last date as-is\n",
+    "            date_range = f\"{dates[0]} to {dates[-1]}\"\n",
+    "    \n",
+    "    return {\n",
+    "        'TRANSACTION_DATES': ' | '.join(dates) if dates else 'NOT_FOUND',\n",
+    "        'LINE_ITEM_DESCRIPTIONS': ' | '.join(descriptions) if descriptions else 'NOT_FOUND',\n",
+    "        'TRANSACTION_AMOUNTS_PAID': ' | '.join(amounts) if amounts else 'NOT_FOUND',\n",
+    "        'STATEMENT_DATE_RANGE': date_range\n",
+    "    }\n",
+    "\n",
+    "# Parse the filtered markdown table from Turn 2\n",
+    "parsed_rows = parse_markdown_table(cleanedOutput3)\n",
+    "\n",
+    "print(f\"📊 Parsed {len(parsed_rows)} transactions from markdown table\")\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"SAMPLE ROWS:\")\n",
+    "print(\"=\" * 60)\n",
+    "for i, row in enumerate(parsed_rows[:3], 1):\n",
+    "    print(f\"\\nRow {i}:\")\n",
+    "    for key, value in row.items():\n",
+    "        print(f\"  {key}: {value}\")\n",
+    "\n",
+    "# Extract schema fields using the LITERAL column names from pattern matching\n",
+    "schema_fields = extract_schema_fields(parsed_rows, date_col, desc_col, debit_col)\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"EXTRACTED SCHEMA FIELDS:\")\n",
+    "print(\"=\" * 60)\n",
+    "for field, value in schema_fields.items():\n",
+    "    print(f\"{field}: {value}\")\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Save to file\n",
+    "output_path = Path(\"llama_extracted_fields.txt\")\n",
+    "with output_path.open(\"w\", encoding=\"utf-8\") as f:\n",
+    "    for field, value in schema_fields.items():\n",
+    "        f.write(f\"{field}: {value}\\n\")\n",
+    "\n",
+    "print(f\"\\n✅ Schema fields saved to: {output_path}\")\n",
+    "print(f\"💡 Fields extracted from columns: '{date_col}' | '{desc_col}' | '{debit_col}'\")"
+   ]
   },
   {
    "cell_type": "markdown",
