Enhance debug output for Turn 1 prompt generation by adding multi-line extraction rule details and improving clarity in printed messages.

--- a/llama_bank_statement_independent_turns.ipynb
+++ b/llama_bank_statement_independent_turns.ipynb
@@ -1440,12 +1440,17 @@
     "print(f\"💡 Dynamic example and rules generated for {len(table_headers)}-column format\")\n",
     "print(f\"🔄 Fresh context (no conversation history)\")\n",
     "\n",
-    "# DEBUG: Show the generated prompt with rendered markdown example\n",
+    "# DEBUG: Show the generated prompt with rendered markdown example AND multi-line rule\n",
     "print(\"\\n\" + \"=\" * 60)\n",
     "print(\"🔍 GENERATED TURN 1 PROMPT - Dynamic Example:\")\n",
     "print(\"=\" * 60)\n",
     "display(Markdown(f\"**Example table that will be shown to Llama:**\\n\\n{example_table}\"))\n",
-    "print(\"=\" * 60 + \"\\n\")\n",
+    "print(\"\n\" + \"=\" * 60)\n",
+    "print(\"🔍 MULTI-LINE EXTRACTION RULE:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(f\"If you see a transaction row that spans multiple lines, combine the description lines into a single row.\")\n",
+    "print(f\"For example, if you see:\n{multiline_rule}\")\n",
+    "print(\"=\" * 60 + \"\n\")\n",
     "\n",
     "print(\"🤖 Generating response with Llama-3.2-Vision...\")\n",
     "\n",
@@ -1676,7 +1681,7 @@
     "            continue\n",
     "            \n",
     "        # Skip separator rows\n",
-    "        cleaned = line.replace('|', '').replace('-', '').replace(' ', '')\n",
+    "        cleaned = line.replace(\"|\", \"\").replace(\"-\", \"\").replace(\" \", \"\").replace(\":\", \"\")\n",
     "        if not cleaned:\n",
     "            continue\n",
     "        \n",
