Fix formatting in Turn 1 prompt output for multi-line extraction rule display

--- a/llama_bank_statement_independent_turns.ipynb
+++ b/llama_bank_statement_independent_turns.ipynb
@@ -1445,12 +1445,12 @@
     "print(\"🔍 GENERATED TURN 1 PROMPT - Dynamic Example:\")\n",
     "print(\"=\" * 60)\n",
     "display(Markdown(f\"**Example table that will be shown to Llama:**\\n\\n{example_table}\"))\n",
-    "print(\"\n\" + \"=\" * 60)\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
     "print(\"🔍 MULTI-LINE EXTRACTION RULE:\")\n",
     "print(\"=\" * 60)\n",
     "print(f\"If you see a transaction row that spans multiple lines, combine the description lines into a single row.\")\n",
-    "print(f\"For example, if you see:\n{multiline_rule}\")\n",
-    "print(\"=\" * 60 + \"\n\")\n",
+    "print(f\"For example, if you see:\\n{multiline_rule}\")\n",
+    "print(\"=\" * 60 + \"\\n\")\n",
     "\n",
     "print(\"🤖 Generating response with Llama-3.2-Vision...\")\n",
     "\n",
