Enhance multi-line extraction rule generation for improved clarity and alignment. Added examples for debit and credit transactions with proper formatting.

--- a/llama_bank_statement_independent_turns.ipynb
+++ b/llama_bank_statement_independent_turns.ipynb
@@ -1349,48 +1349,85 @@
     "    return rows\n",
     "\n",
     "def build_multiline_rule(headers):\n",
-    "    \"\"\"Generate multi-line extraction rule examples matching column count.\"\"\"\n",
+    "    \"\"\"Generate multi-line extraction rule examples matching column count with aligned pipes.\n",
+    "    \n",
+    "    Shows both debit and credit transaction examples.\n",
+    "    \"\"\"\n",
     "    num_cols = len(headers)\n",
     "    \n",
-    "    # Build placeholder columns\n",
-    "    placeholders = []\n",
-    "    for i, h in enumerate(headers):\n",
+    "    # DEBIT EXAMPLE: Amount in second-to-last column (Debit)\n",
+    "    debit_line1 = []\n",
+    "    debit_line2 = []\n",
+    "    debit_combined = []\n",
+    "    \n",
+    "    for i in range(num_cols):\n",
     "        if i == 0:\n",
-    "            placeholders.append(\"a date\")\n",
+    "            debit_line1.append(\"a date\")\n",
+    "            debit_line2.append(\"\")\n",
+    "            debit_combined.append(\"a date\")\n",
     "        elif i == 1:\n",
-    "            placeholders.append(\"line 1\")\n",
+    "            debit_line1.append(\"line 1\")\n",
+    "            debit_line2.append(\"line 2\")\n",
+    "            debit_combined.append(\"line 1 line 2\")\n",
+    "        elif num_cols >= 4 and i == num_cols - 2:\n",
+    "            debit_line1.append(\"amount1\")  # Debit amount on first line\n",
+    "            debit_line2.append(\"\")  # Empty on continuation\n",
+    "            debit_combined.append(\"amount1\")\n",
     "        else:\n",
-    "            placeholders.append(\"\")\n",
+    "            debit_line1.append(\"\")\n",
+    "            debit_line2.append(\"\")\n",
+    "            debit_combined.append(\"\")\n",
     "    \n",
-    "    # Build second line (continuation)\n",
-    "    placeholders2 = []\n",
-    "    for i, h in enumerate(headers):\n",
-    "        if i == 1:\n",
-    "            placeholders2.append(\"line 2\")\n",
-    "        else:\n",
-    "            placeholders2.append(\"\")\n",
+    "    # CREDIT EXAMPLE: Amount in last column (Credit)\n",
+    "    credit_line1 = []\n",
+    "    credit_line2 = []\n",
+    "    credit_combined = []\n",
     "    \n",
-    "    # Build combined result\n",
-    "    combined = []\n",
-    "    for i, h in enumerate(headers):\n",
+    "    for i in range(num_cols):\n",
     "        if i == 0:\n",
-    "            combined.append(\"a date\")\n",
+    "            credit_line1.append(\"a date\")\n",
+    "            credit_line2.append(\"\")\n",
+    "            credit_combined.append(\"a date\")\n",
     "        elif i == 1:\n",
-    "            combined.append(\"line 1 line 2\")\n",
+    "            credit_line1.append(\"line 1\")\n",
+    "            credit_line2.append(\"line 2\")\n",
+    "            credit_combined.append(\"line 1 line 2\")\n",
+    "        elif num_cols >= 4 and i == num_cols - 1:\n",
+    "            credit_line1.append(\"amount2\")  # Credit amount on first line\n",
+    "            credit_line2.append(\"\")  # Empty on continuation\n",
+    "            credit_combined.append(\"amount2\")\n",
     "        else:\n",
-    "            combined.append(\"\")\n",
+    "            credit_line1.append(\"\")\n",
+    "            credit_line2.append(\"\")\n",
+    "            credit_combined.append(\"\")\n",
     "    \n",
-    "    # Add some amounts for visual clarity (only for 4+ column formats)\n",
-    "    if num_cols >= 4:\n",
-    "        placeholders[-2] = \"amount1\"\n",
-    "        placeholders[-1] = \"amount2\"\n",
-    "        combined[-2] = \"amount1\"\n",
-    "        combined[-1] = \"amount2\"\n",
+    "    # Calculate column widths for alignment\n",
+    "    col_widths = []\n",
+    "    for i in range(num_cols):\n",
+    "        max_width = max(\n",
+    "            len(debit_line1[i]),\n",
+    "            len(debit_line2[i]),\n",
+    "            len(debit_combined[i]),\n",
+    "            len(credit_line1[i]),\n",
+    "            len(credit_line2[i]),\n",
+    "            len(credit_combined[i])\n",
+    "        )\n",
+    "        col_widths.append(max_width)\n",
     "    \n",
-    "    rule_visual = f\"\"\"   {\" | \".join(placeholders)}\n",
-    "       {\" | \".join(placeholders2)}\n",
+    "    # Format rows with proper alignment\n",
+    "    def format_row(values):\n",
+    "        padded = [values[i].ljust(col_widths[i]) for i in range(len(values))]\n",
+    "        return \" | \".join(padded)\n",
+    "    \n",
+    "    rule_visual = f\"\"\"   {format_row(debit_line1)}\n",
+    "       {format_row(debit_line2)}\n",
     "    you must extract it as:\n",
-    "       {\" | \".join(combined)}\"\"\"\n",
+    "       {format_row(debit_combined)}\n",
+    "   or\n",
+    "       {format_row(credit_line1)}\n",
+    "       {format_row(credit_line2)}\n",
+    "    you must extract it as:\n",
+    "       {format_row(credit_combined)}\"\"\"\n",
     "    \n",
     "    return rule_visual\n",
     "\n",
