Refactor multi-line rule formatting to ensure proper alignment and truncation of rows. Improved handling of last non-empty columns for debit and credit transactions.

--- a/llama_bank_statement_independent_turns.ipynb
+++ b/llama_bank_statement_independent_turns.ipynb
@@ -1414,20 +1414,36 @@
     "        )\n",
     "        col_widths.append(max_width)\n",
     "    \n",
-    "    # Format rows with proper alignment\n",
-    "    def format_row(values):\n",
-    "        padded = [values[i].ljust(col_widths[i]) for i in range(len(values))]\n",
-    "        return \" | \".join(padded)\n",
+    "    # Find the last non-empty column across all debit rows\n",
+    "    debit_last_col = 0\n",
+    "    for i in range(num_cols):\n",
+    "        if debit_line1[i] or debit_line2[i] or debit_combined[i]:\n",
+    "            debit_last_col = i\n",
     "    \n",
-    "    rule_visual = f\"\"\"   {format_row(debit_line1)}\n",
-    "       {format_row(debit_line2)}\n",
+    "    # Find the last non-empty column across all credit rows\n",
+    "    credit_last_col = 0\n",
+    "    for i in range(num_cols):\n",
+    "        if credit_line1[i] or credit_line2[i] or credit_combined[i]:\n",
+    "            credit_last_col = i\n",
+    "    \n",
+    "    # Format rows with proper alignment, truncating at last non-empty column\n",
+    "    def format_row(values, last_col):\n",
+    "        # Only include columns up to last_col\n",
+    "        truncated = values[:last_col + 1]\n",
+    "        padded = [truncated[i].ljust(col_widths[i]) for i in range(len(truncated))]\n",
+    "        return \" | \".join(padded) + \" |\"\n",
+    "    \n",
+    "    rule_visual = f\"\"\"If you see a transaction row that spans multiple lines, combine the description lines into a single row.\n",
+    "For example, if you see:\n",
+    "       {format_row(debit_line1, debit_last_col)}\n",
+    "              {format_row(debit_line2, debit_last_col)}\n",
     "    you must extract it as:\n",
-    "       {format_row(debit_combined)}\n",
+    "       {format_row(debit_combined, debit_last_col)}\n",
     "   or\n",
-    "       {format_row(credit_line1)}\n",
-    "       {format_row(credit_line2)}\n",
+    "       {format_row(credit_line1, credit_last_col)}\n",
+    "              {format_row(credit_line2, credit_last_col)}\n",
     "    you must extract it as:\n",
-    "       {format_row(credit_combined)}\"\"\"\n",
+    "       {format_row(credit_combined, credit_last_col)}\"\"\"\n",
     "    \n",
     "    return rule_visual\n",
     "\n",
