Clarify multi-line extraction rule documentation by specifying that only examples are returned without introductory text.

--- a/llama_bank_statement_independent_turns.ipynb
+++ b/llama_bank_statement_independent_turns.ipynb
@@ -1352,6 +1352,7 @@
     "    \"\"\"Generate multi-line extraction rule examples matching column count with aligned pipes.\n",
     "    \n",
     "    Shows both debit and credit transaction examples.\n",
+    "    Returns just the examples without introductory text.\n",
     "    \"\"\"\n",
     "    num_cols = len(headers)\n",
     "    \n",
@@ -1433,9 +1434,8 @@
     "        padded = [truncated[i].ljust(col_widths[i]) for i in range(len(truncated))]\n",
     "        return \" | \".join(padded) + \" |\"\n",
     "    \n",
-    "    rule_visual = f\"\"\"If you see a transaction row that spans multiple lines, combine the description lines into a single row.\n",
-    "For example, if you see:\n",
-    "       {format_row(debit_line1, debit_last_col)}\n",
+    "    # Return just the examples (introductory text printed separately)\n",
+    "    rule_visual = f\"\"\"       {format_row(debit_line1, debit_last_col)}\n",
     "              {format_row(debit_line2, debit_last_col)}\n",
     "    you must extract it as:\n",
     "       {format_row(debit_combined, debit_last_col)}\n",
