Refactor multi-line rule generation to use actual column indices for debit and credit transactions
- Updated the `build_multiline_rule` function to dynamically identify debit and credit columns based on header names.
- Simplified example row creation for debit and credit transactions using the identified indices.
- Enhanced formatting logic to ensure proper alignment of output.
- Removed redundant code related to fixed example lines and column width calculations.

--- a/llama_bank_statement_independent_turns.ipynb
+++ b/llama_bank_statement_independent_turns.ipynb
@@ -1349,103 +1349,77 @@
     "    return rows\n",
     "\n",
     "def build_multiline_rule(headers):\n",
-    "    \"\"\"Generate multi-line extraction rule examples matching column count with aligned pipes.\n",
-    "    \n",
-    "    Shows both debit and credit transaction examples.\n",
-    "    Returns just the examples without introductory text.\n",
-    "    \"\"\"\n",
+    "    \"\"\"Generate multi-line extraction rule using ACTUAL column structure from Turn 0.\"\"\"\n",
     "    num_cols = len(headers)\n",
     "    \n",
-    "    # DEBIT EXAMPLE: Amount in second-to-last column (Debit)\n",
-    "    debit_line1 = []\n",
-    "    debit_line2 = []\n",
-    "    debit_combined = []\n",
+    "    # Find actual Debit and Credit columns by name\n",
+    "    debit_idx = None\n",
+    "    credit_idx = None\n",
     "    \n",
-    "    for i in range(num_cols):\n",
-    "        if i == 0:\n",
-    "            debit_line1.append(\"a date\")\n",
-    "            debit_line2.append(\"\")\n",
-    "            debit_combined.append(\"a date\")\n",
-    "        elif i == 1:\n",
-    "            debit_line1.append(\"line 1\")\n",
-    "            debit_line2.append(\"line 2\")\n",
-    "            debit_combined.append(\"line 1 line 2\")\n",
-    "        elif num_cols >= 4 and i == num_cols - 2:\n",
-    "            debit_line1.append(\"amount1\")  # Debit amount on first line\n",
-    "            debit_line2.append(\"\")  # Empty on continuation\n",
-    "            debit_combined.append(\"amount1\")\n",
-    "        else:\n",
-    "            debit_line1.append(\"\")\n",
-    "            debit_line2.append(\"\")\n",
-    "            debit_combined.append(\"\")\n",
+    "    for i, header in enumerate(headers):\n",
+    "        h_lower = header.lower()\n",
+    "        if any(p in h_lower for p in [\"debit\", \"withdrawal\", \"paid\", \"spent\", \"dr\"]):\n",
+    "            debit_idx = i\n",
+    "        if any(p in h_lower for p in [\"credit\", \"deposit\", \"received\", \"cr\"]):\n",
+    "            credit_idx = i\n",
     "    \n",
-    "    # CREDIT EXAMPLE: Amount in last column (Credit)\n",
-    "    credit_line1 = []\n",
-    "    credit_line2 = []\n",
-    "    credit_combined = []\n",
+    "    if debit_idx is None or credit_idx is None:\n",
+    "        return \"Multi-line: combine description lines into single row.\"\n",
     "    \n",
-    "    for i in range(num_cols):\n",
-    "        if i == 0:\n",
-    "            credit_line1.append(\"a date\")\n",
-    "            credit_line2.append(\"\")\n",
-    "            credit_combined.append(\"a date\")\n",
-    "        elif i == 1:\n",
-    "            credit_line1.append(\"line 1\")\n",
-    "            credit_line2.append(\"line 2\")\n",
-    "            credit_combined.append(\"line 1 line 2\")\n",
-    "        elif num_cols >= 4 and i == num_cols - 1:\n",
-    "            credit_line1.append(\"amount2\")  # Credit amount on first line\n",
-    "            credit_line2.append(\"\")  # Empty on continuation\n",
-    "            credit_combined.append(\"amount2\")\n",
-    "        else:\n",
-    "            credit_line1.append(\"\")\n",
-    "            credit_line2.append(\"\")\n",
-    "            credit_combined.append(\"\")\n",
+    "    def format_table(rows):\n",
+    "        \"\"\"Format rows with aligned pipes.\"\"\"\n",
+    "        col_widths = [max(len(row[i]) for row in rows) for i in range(len(rows[0]))]\n",
+    "        # Ensure empty columns have minimum width\n",
+    "        col_widths = [max(w, 7) if w > 0 else 7 for w in col_widths]\n",
+    "        \n",
+    "        # Find last non-empty column\n",
+    "        last_col = max(i for row in rows for i, val in enumerate(row) if val)\n",
+    "        \n",
+    "        formatted = []\n",
+    "        for row in rows:\n",
+    "            # Include up to last_col, plus one more if not at end\n",
+    "            end = last_col + 2 if last_col < len(row) - 1 else last_col + 1\n",
+    "            parts = [row[i].ljust(col_widths[i]) for i in range(min(end, len(row)))]\n",
+    "            formatted.append(\" | \".join(parts))\n",
+    "        return formatted\n",
     "    \n",
-    "    # Calculate column widths for alignment\n",
-    "    col_widths = []\n",
-    "    for i in range(num_cols):\n",
-    "        max_width = max(\n",
-    "            len(debit_line1[i]),\n",
-    "            len(debit_line2[i]),\n",
-    "            len(debit_combined[i]),\n",
-    "            len(credit_line1[i]),\n",
-    "            len(credit_line2[i]),\n",
-    "            len(credit_combined[i])\n",
-    "        )\n",
-    "        col_widths.append(max_width)\n",
+    "    # Create example rows using ACTUAL column positions\n",
+    "    # Credit example (amount in credit_idx position)\n",
+    "    credit_rows = [[\"\"] * num_cols for _ in range(3)]\n",
+    "    credit_rows[0][0] = \"a date\"\n",
+    "    credit_rows[0][1] = \"line 1\"\n",
+    "    credit_rows[0][credit_idx] = \"85.50\"\n",
+    "    credit_rows[1][1] = \"line 2\"\n",
+    "    credit_rows[2][0] = \"a date\"\n",
+    "    credit_rows[2][1] = \"line 1 line 2\"\n",
+    "    credit_rows[2][credit_idx] = \"85.50\"\n",
     "    \n",
-    "    # Find the last non-empty column across all debit rows\n",
-    "    debit_last_col = 0\n",
-    "    for i in range(num_cols):\n",
-    "        if debit_line1[i] or debit_line2[i] or debit_combined[i]:\n",
-    "            debit_last_col = i\n",
+    "    # Debit example (amount in debit_idx position)\n",
+    "    debit_rows = [[\"\"] * num_cols for _ in range(3)]\n",
+    "    debit_rows[0][0] = \"a date\"\n",
+    "    debit_rows[0][1] = \"line 1\"\n",
+    "    debit_rows[0][debit_idx] = \"150.00\"\n",
+    "    debit_rows[1][1] = \"line 2\"\n",
+    "    debit_rows[2][0] = \"a date\"\n",
+    "    debit_rows[2][1] = \"line 1 line 2\"\n",
+    "    debit_rows[2][debit_idx] = \"150.00\"\n",
     "    \n",
-    "    # Find the last non-empty column across all credit rows\n",
-    "    credit_last_col = 0\n",
-    "    for i in range(num_cols):\n",
-    "        if credit_line1[i] or credit_line2[i] or credit_combined[i]:\n",
-    "            credit_last_col = i\n",
+    "    # Format both examples\n",
+    "    credit_fmt = format_table(credit_rows)\n",
+    "    debit_fmt = format_table(debit_rows)\n",
     "    \n",
-    "    # Format rows with proper alignment, truncating at last non-empty column\n",
-    "    def format_row(values, last_col):\n",
-    "        # Only include columns up to last_col\n",
-    "        truncated = values[:last_col + 1]\n",
-    "        padded = [truncated[i].ljust(col_widths[i]) for i in range(len(truncated))]\n",
-    "        return \" | \".join(padded) + \" |\"\n",
-    "    \n",
-    "    # Return just the examples (introductory text printed separately)\n",
-    "    rule_visual = f\"\"\"       {format_row(debit_line1, debit_last_col)}\n",
-    "              {format_row(debit_line2, debit_last_col)}\n",
+    "    # Build rule with examples in detected column order\n",
+    "    rule = f\"\"\"       {credit_fmt[0]}\n",
+    "              {credit_fmt[1]}\n",
     "    you must extract it as:\n",
-    "       {format_row(debit_combined, debit_last_col)}\n",
+    "       {credit_fmt[2]}\n",
     "   or\n",
-    "       {format_row(credit_line1, credit_last_col)}\n",
-    "              {format_row(credit_line2, credit_last_col)}\n",
+    "       {debit_fmt[0]}\n",
+    "              {debit_fmt[1]}\n",
     "    you must extract it as:\n",
-    "       {format_row(credit_combined, credit_last_col)}\"\"\"\n",
+    "       {debit_fmt[2]}\"\"\"\n",
     "    \n",
-    "    return rule_visual\n",
+    "    return rule\n",
     "\n",
     "# Generate dynamic example rows\n",
     "example_rows = build_dynamic_example(table_headers, date_col, desc_col, debit_col, credit_col, balance_col)\n",
